# spaceriders-apiv2

./: .dockerignore  .env.eg  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  buildspec.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
scripts/: flush_db.sh  set_building_level.sh  set_health.sh  set_planet_resources.sh  set_resource_reserve.sh  show_planets.sh  start_cronjob.sh  start_local.sh  start_websockets.sh
src/adapters/cronjobs/: __init__.py
src/adapters/http/: __init__.py  security.py
src/adapters/shared/: beani_repository_adapter.py  beanie_models_adapter.py  cache_adapter.py  evm_adapter.py  logging_adapter.py  medium_parser.py
src/apps/cronjobs/: __init__.py  dependencies.py  settings.py
src/apps/http/: __init__.py  dependencies.py  settings.py  urls.py
src/apps/websockets/: __init__.py  dependencies.py
src/controllers/cronjobs/: __init__.py
src/controllers/http/: __init__.py
src/controllers/websockets/: __init__.py
src/core/account/: __init__.py
src/core/authenticate/: __init__.py
src/core/buildable_items/: README.md  __init__.py
src/core/currency_market/: __init__.py
src/core/experience_points/: __init__.py
src/core/favourite_planet/: __init__.py
src/core/fetch_chain_data/: __init__.py
src/core/get_planets/: __init__.py
src/core/leaderboard/: __init__.py
src/core/medium_scraper/: __init__.py
src/core/mint_planet/: __init__.py
src/core/nft_data/: __init__.py
src/core/nft_metadata/: __init__.py
src/core/planet_bkm/: __init__.py
src/core/planet_email/: __init__.py
(+38 files in other folders)
